--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -243,6 +243,8 @@
     "10072":"保存终止申请失败",
     "10073":"已经拒绝了终止申请",
     "10074":"你不能同意自己申请的终止，请等待对方处理。",
-    "10075":"已通过了任务终止申请，任务终止成功。"
+    "10075":"已通过了任务终止申请，任务终止成功。",
+    "10076":"创建申诉事件失败",
+    "10077":"更新申诉事件失败"
   }
 }
