--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -246,7 +246,13 @@
     "10075":"已通过了任务终止申请，任务终止成功。",
     "10076":"创建申诉事件失败",
     "10077":"更新申诉事件失败",
-    "10078":"更新撤诉申请失败"
+    "10078":"更新撤诉申请失败",
+    "10079":"创建撤诉申请失败",
+    "10080":"读取撤诉申请失败",
+    "10081":"设置阅读时间失败",
+    "10082":"拒绝撤诉申请失败",
+    "10083":"同意撤诉申请失败"
+
 
   }
 }
