--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -251,8 +251,17 @@
     "10080":"读取撤诉申请失败",
     "10081":"设置阅读时间失败",
     "10082":"拒绝撤诉申请失败",
-    "10083":"同意撤诉申请失败"
-
-
+    "10083":"同意撤诉申请失败",
+    "10084":"获取任务信息失败",
+    "10085":"只有甲方或乙方用户能撤销申诉任务",
+    "10086":"该任务当前没有申诉事件",
+    "10087":"你不能处理你自己创建的撤诉申请",
+    "10088":"读取我的申诉信息失败",
+    "10089":"只有甲方或者乙方用户能访问该功能",
+    "10090":"只有甲方或者乙方能发起申诉",
+    "10091":"该任务正在申诉中，不能再发起申诉",
+    "10092":"该任务已经发布过了，且正在进行中，不能重复发布",
+    "10093":"保存私有任务失败",
+    "10094":"删除私有任务失败"
   }
 }
