--- a/src/language/english.json
+++ b/src/language/english.json
@@ -250,7 +250,17 @@
     "10080":"Read repeal list failed",
     "10081":"Set repeal read time failed",
     "10082":"Reject repeal failed",
-    "10083":"Accept repeal failed"
-
+    "10083":"Accept repeal failed",
+    "10084":"Read job information failed",
+    "10085":"Only partyA or partyB user can apply repeal the spotlight",
+    "10086":"This job has not been spotted currently",
+    "10087":"You cannot process the repeal what created by yourself",
+    "10088":"Read my spotlight record error",
+    "10089":"Only partyA or partyB user can access this function",
+    "10090":"Only partyA or partyB can spotlight this job",
+    "10091":"This job has been spotting, cannot spotlight again",
+    "10092":"This job has published already, cannot publish duplicate",
+    "10093":"Save private task failed",
+    "10094":"Delete private task failed"
   }
 }
