--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -264,6 +264,7 @@
     "10091":"该任务正在申诉中，不能再发起申诉",
     "10092":"该任务已经发布过了，且正在进行中，不能重复发布",
     "10093":"保存私有任务失败",
-    "10094":"删除私有任务失败"
+    "10094":"删除私有任务失败",
+    "10095":"统计子任务数量错误"
   }
 }
