--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -73,7 +73,9 @@
     "errPublish": "抱歉，发布任务失败!",
     "checkPrice": "请输入正确的任务金额",
     "pidTile":"父任务标题",
-    "subTaskTitleBar":"创建子任务：创建一个子任务"
+    "subTaskTitleBar":"创建子任务：创建一个子任务",
+    "addSubTaskTitle":"增加",
+    "qDelete":"确定要删除任务？"
   },
   "job": {
     "title": "任务标题",
@@ -265,6 +267,8 @@
     "10092":"该任务已经发布过了，且正在进行中，不能重复发布",
     "10093":"保存私有任务失败",
     "10094":"删除私有任务失败",
-    "10095":"统计子任务数量错误"
+    "10095":"统计子任务数量错误",
+    "10096":"创建子任务失败",
+    "10097":"不能删除有子任务的任务"
   }
 }
