--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -270,6 +270,7 @@
     "10094":"删除私有任务失败",
     "10095":"统计子任务数量错误",
     "10096":"创建子任务失败",
-    "10097":"不能删除有子任务的任务"
+    "10097":"不能删除有子任务的任务",
+    "10098":"读取我发布的新任务失败"
   }
 }
