--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -97,8 +97,9 @@
     "tabLog":"日志",
     "tabComplete":"验收",
     "tabStop":"终止",
-    "tabSpotlight":"申诉"
-
+    "tabSpotlight":"申诉",
+    "update":"修改",
+    "updateTipSucess":"任务修改成功"
   },
   "apply": {
     "applyTime": "申请时间",
@@ -271,6 +272,9 @@
     "10095":"统计子任务数量错误",
     "10096":"创建子任务失败",
     "10097":"不能删除有子任务的任务",
-    "10098":"读取我发布的新任务失败"
+    "10098":"读取我发布的新任务失败",
+    "10099":"修改已发布的新任务失败",
+    "10100":"你要修改的任务根本不存在",
+    "10101":"该任务已被其他用户处理，不能修改了"
   }
 }
