--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -275,6 +275,7 @@
     "10098":"读取我发布的新任务失败",
     "10099":"修改已发布的新任务失败",
     "10100":"你要修改的任务根本不存在",
-    "10101":"该任务已被其他用户处理，不能修改了"
+    "10101":"该任务已被其他用户处理，不能修改了",
+    "10102":"你只能修改自己发布的任务"
   }
 }
