--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -99,7 +99,10 @@
     "tabStop":"终止",
     "tabSpotlight":"申诉",
     "update":"修改",
-    "updateTipSucess":"任务修改成功"
+    "updateTipSucess":"任务修改成功",
+    "delete":"删除",
+    "deleteTip":"任务删除后不可恢复，确定要删除吗？",
+    "deleteTipSuccess":"任务删除成功"
   },
   "apply": {
     "applyTime": "申请时间",
@@ -276,6 +279,9 @@
     "10099":"修改已发布的新任务失败",
     "10100":"你要修改的任务根本不存在",
     "10101":"该任务已被其他用户处理，不能修改了",
-    "10102":"你只能修改自己发布的任务"
+    "10102":"你只能修改自己发布的任务",
+    "10103":"删除新任务失败",
+    "10104":"该任务已被其他用户处理，不能修改了",
+    "10105":"你只能删除自己发布的任务"
   }
 }
