--- a/src/language/english.json
+++ b/src/language/english.json
@@ -99,7 +99,10 @@
     "tabStop":"Stop",
     "tabSpotlight":"Spotlight",
     "update":"Update",
-    "updateTipSucess":"Update job success"
+    "updateTipSucess":"Update job success",
+    "delete":"Delete",
+    "deleteTip":"The job cannot be restored after delete, are you sure?",
+    "deleteTipSuccess":"The job has been deleted successfully"
   },
   "apply":{
     "applyTime":"Apply Time",
@@ -276,6 +279,9 @@
     "10099":"Update my published new job failed",
     "10100":"The job you want to update is not exist",
     "10101":"The job has been applied by others, cannot update anymore",
-    "10102":"Sorry! you only can update the job published by yourself"
+    "10102":"Sorry! you only can update the job published by yourself",
+    "10103":"Delete job failed",
+    "10104":"The job has been applied by others, cannot be delete",
+    "10105":"Sorry! you only can delete the job published by yourself"
   }
 }
