--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -20,16 +20,16 @@
     "myAccount": "我的账户",
     "myHonor": "我的荣誉",
     "myApply": "我申请的工作",
-    "myMatch":"分配给我的任务",
-    "dashboard":"控制台",
-    "myPendingJob":"我发布并等待成交的工作"
+    "myMatch": "分配给我的任务",
+    "dashboard": "控制台",
+    "myPendingJob": "我发布并等待成交的工作"
   },
   "common": {
     "tipTitleQuestion": "提问",
     "ok": "确定",
     "cancel": "取消",
     "unRead": "未阅读",
-    "submit":"提交"
+    "submit": "提交"
   },
   "label": {
     "title": "标题",
@@ -73,10 +73,10 @@
     "succPublish": "恭喜，发布任务成功！",
     "errPublish": "抱歉，发布任务失败!",
     "checkPrice": "请输入正确的任务金额",
-    "pidTile":"父任务标题",
-    "subTaskTitleBar":"创建子任务：创建一个子任务",
-    "addSubTaskTitle":"增加",
-    "qDelete":"确定要删除任务？"
+    "pidTile": "父任务标题",
+    "subTaskTitleBar": "创建子任务：创建一个子任务",
+    "addSubTaskTitle": "增加",
+    "qDelete": "确定要删除任务？"
   },
   "job": {
     "title": "任务标题",
@@ -84,8 +84,8 @@
     "detail": "任务需求",
     "days": "任务期限（天）",
     "publishUserName": "任务发布者",
-    "partyAName":"甲方",
-    "partyBName":"乙方",
+    "partyAName": "甲方",
+    "partyBName": "乙方",
     "publishTime": "发布时间",
     "price": "任务报酬",
     "apply": "申请任务",
@@ -94,15 +94,15 @@
     "btAcceptJob": "接受任务",
     "btRejectJob": "拒绝任务",
     "rejectJobRemark": "拒绝任务说明",
-    "tabLog":"日志",
-    "tabComplete":"验收",
-    "tabStop":"终止",
-    "tabSpotlight":"申诉",
-    "update":"修改",
-    "updateTipSucess":"任务修改成功",
-    "delete":"删除",
-    "deleteTip":"任务删除后不可恢复，确定要删除吗？",
-    "deleteTipSuccess":"任务删除成功"
+    "tabLog": "日志",
+    "tabComplete": "验收",
+    "tabStop": "终止",
+    "tabSpotlight": "申诉",
+    "update": "修改",
+    "updateTipSucess": "任务修改成功",
+    "delete": "删除",
+    "deleteTip": "任务删除后不可恢复，确定要删除吗？",
+    "deleteTipSuccess": "任务删除成功"
   },
   "apply": {
     "applyTime": "申请时间",
@@ -113,42 +113,42 @@
     "processRemark": "处理意见",
     "processResult": "处理结果",
     "processTime": "处理时间",
-    "tipReject":"你要拒绝该任务吗？",
-    "tipAccept":"确定要接受该任务吗？",
-    "rejectRemark":"请说明你拒绝该任务的理由"
+    "tipReject": "你要拒绝该任务吗？",
+    "tipAccept": "确定要接受该任务吗？",
+    "rejectRemark": "请说明你拒绝该任务的理由"
   },
-  "partyA":{
-    "contractTime":"签约时间"
+  "partyA": {
+    "contractTime": "签约时间"
   },
-  "jobLog":{
-    "content":"日志内容",
-    "create":"创建日志",
-    "createdTime":"创建时间",
-    "readTime":"对方阅读时间"
+  "jobLog": {
+    "content": "日志内容",
+    "create": "创建日志",
+    "createdTime": "创建时间",
+    "readTime": "对方阅读时间"
   },
-  "jobComplete":{
-    "content":"完成说明",
-    "create":"创建验收日志",
-    "createdTime":"创建时间",
-    "readTime":"对方阅读时间",
-    "reject":"拒绝验收",
-    "accept":"验收通过",
-    "rejectRemark":"拒绝验收说明",
-    "acceptRemark":"通过验收说明"
+  "jobComplete": {
+    "content": "完成说明",
+    "create": "创建验收日志",
+    "createdTime": "创建时间",
+    "readTime": "对方阅读时间",
+    "reject": "拒绝验收",
+    "accept": "验收通过",
+    "rejectRemark": "拒绝验收说明",
+    "acceptRemark": "通过验收说明"
   },
-  "jobStop":{
-    "content":"终止说明",
-    "create":"提议终止",
-    "createdTime":"创建时间",
-    "readTime":"对方阅读时间",
-    "reject":"拒绝终止申请",
-    "accept":"同意终止",
-    "rejectRemark":"拒绝终止说明",
-    "acceptRemark":"通过终止说明",
-    "refund":"退还任务款",
+  "jobStop": {
+    "content": "终止说明",
+    "create": "提议终止",
+    "createdTime": "创建时间",
+    "readTime": "对方阅读时间",
+    "reject": "拒绝终止申请",
+    "accept": "同意终止",
+    "rejectRemark": "拒绝终止说明",
+    "acceptRemark": "通过终止说明",
+    "refund": "退还任务款",
     "processResult": "处理结果",
     "processTime": "处理时间",
-    "processUserName":"处理人"
+    "processUserName": "处理人"
   },
   "user": {
     "username": "用户名",
@@ -177,6 +177,16 @@
       "accept": "审核通过",
       "reject": "审核拒绝"
     }
+  },
+  "account": {
+    "TOP_UP": "充值",
+    "WITHDRAW": "取现",
+    "PUBLISH": "发布任务",
+    "ACCEPT": "接受任务",
+    "REFUND": "退还任务款",
+    "createdTime":"发生时间",
+    "amount":"金额",
+    "type":"类别"
   },
   "syserr": {
     "10002": "没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。",
@@ -221,67 +231,68 @@
     "10041": "接受新任务失败",
     "10042": "更新账户记录错误",
     "10043": "你没有足够的账户余额发布该任务，请充值后再发布。",
-    "10044":"该Email已被其他用户使用了。",
-    "10045":"更新用户手机号码失败。",
-    "10046":"这个手机号码已经被其他用户使用了。",
-    "10047":"保存用户实名失败。",
-    "10048":"保存用户联系信息失败。",
-    "10049":"RPG秘书已经把该任务分配给你了，请在我的新任务里处理。",
-    "10050":"拒绝新任务失败",
-    "10051":"获取我的任务失败",
-    "10052":"创建任务日志失败",
-    "10053":"修改任务日志失败",
-    "10054":"获取任务日志失败",
-    "10055":"设置日志阅读时间错误",
-    "10056":"获取验收日志失败",
-    "10057":"创建验收日志失败",
-    "10058":"设置验收日志的阅读时间错误",
-    "10059":"修改验收日志错误",
-    "10060":"拒绝验收处理失败",
-    "10061":"验收通过处理失败",
-    "10062":"保存荣誉值失败",
-    "10063":"该任务已经验收通过，不能重复验收",
-    "10064":"创建终止任务申请失败",
-    "10065":"读取终止任务申请失败",
-    "10066":"设置终止任务的阅读时间失败",
-    "10067":"处理拒绝终止任务失败",
-    "10068":"处理同意终止任务失败",
-    "10069":"你上次创建的终止申请还未被处理，所以不能重复申请",
-    "10070":"该任务已经验收通过了，还要怎样终止呢？",
-    "10071":"非进行过程中的任务不能被终止",
-    "10072":"保存终止申请失败",
-    "10073":"已经拒绝了终止申请",
-    "10074":"你不能同意自己申请的终止，请等待对方处理。",
-    "10075":"已通过了任务终止申请，任务终止成功。",
-    "10076":"创建申诉事件失败",
-    "10077":"更新申诉事件失败",
-    "10078":"更新撤诉申请失败",
-    "10079":"创建撤诉申请失败",
-    "10080":"读取撤诉申请失败",
-    "10081":"设置阅读时间失败",
-    "10082":"拒绝撤诉申请失败",
-    "10083":"同意撤诉申请失败",
-    "10084":"获取任务信息失败",
-    "10085":"只有甲方或乙方用户能撤销申诉任务",
-    "10086":"该任务当前没有申诉事件",
-    "10087":"你不能处理你自己创建的撤诉申请",
-    "10088":"读取我的申诉信息失败",
-    "10089":"只有甲方或者乙方用户能访问该功能",
-    "10090":"只有甲方或者乙方能发起申诉",
-    "10091":"该任务正在申诉中，不能再发起申诉",
-    "10092":"该任务已经发布过了，且正在进行中，不能重复发布",
-    "10093":"保存私有任务失败",
-    "10094":"删除私有任务失败",
-    "10095":"统计子任务数量错误",
-    "10096":"创建子任务失败",
-    "10097":"不能删除有子任务的任务",
-    "10098":"读取我发布的新任务失败",
-    "10099":"修改已发布的新任务失败",
-    "10100":"你要修改的任务根本不存在",
-    "10101":"该任务已被其他用户处理，不能修改了",
-    "10102":"你只能修改自己发布的任务",
-    "10103":"删除新任务失败",
-    "10104":"该任务已被其他用户处理，不能修改了",
-    "10105":"你只能删除自己发布的任务"
+    "10044": "该Email已被其他用户使用了。",
+    "10045": "更新用户手机号码失败。",
+    "10046": "这个手机号码已经被其他用户使用了。",
+    "10047": "保存用户实名失败。",
+    "10048": "保存用户联系信息失败。",
+    "10049": "RPG秘书已经把该任务分配给你了，请在我的新任务里处理。",
+    "10050": "拒绝新任务失败",
+    "10051": "获取我的任务失败",
+    "10052": "创建任务日志失败",
+    "10053": "修改任务日志失败",
+    "10054": "获取任务日志失败",
+    "10055": "设置日志阅读时间错误",
+    "10056": "获取验收日志失败",
+    "10057": "创建验收日志失败",
+    "10058": "设置验收日志的阅读时间错误",
+    "10059": "修改验收日志错误",
+    "10060": "拒绝验收处理失败",
+    "10061": "验收通过处理失败",
+    "10062": "保存荣誉值失败",
+    "10063": "该任务已经验收通过，不能重复验收",
+    "10064": "创建终止任务申请失败",
+    "10065": "读取终止任务申请失败",
+    "10066": "设置终止任务的阅读时间失败",
+    "10067": "处理拒绝终止任务失败",
+    "10068": "处理同意终止任务失败",
+    "10069": "你上次创建的终止申请还未被处理，所以不能重复申请",
+    "10070": "该任务已经验收通过了，还要怎样终止呢？",
+    "10071": "非进行过程中的任务不能被终止",
+    "10072": "保存终止申请失败",
+    "10073": "已经拒绝了终止申请",
+    "10074": "你不能同意自己申请的终止，请等待对方处理。",
+    "10075": "已通过了任务终止申请，任务终止成功。",
+    "10076": "创建申诉事件失败",
+    "10077": "更新申诉事件失败",
+    "10078": "更新撤诉申请失败",
+    "10079": "创建撤诉申请失败",
+    "10080": "读取撤诉申请失败",
+    "10081": "设置阅读时间失败",
+    "10082": "拒绝撤诉申请失败",
+    "10083": "同意撤诉申请失败",
+    "10084": "获取任务信息失败",
+    "10085": "只有甲方或乙方用户能撤销申诉任务",
+    "10086": "该任务当前没有申诉事件",
+    "10087": "你不能处理你自己创建的撤诉申请",
+    "10088": "读取我的申诉信息失败",
+    "10089": "只有甲方或者乙方用户能访问该功能",
+    "10090": "只有甲方或者乙方能发起申诉",
+    "10091": "该任务正在申诉中，不能再发起申诉",
+    "10092": "该任务已经发布过了，且正在进行中，不能重复发布",
+    "10093": "保存私有任务失败",
+    "10094": "删除私有任务失败",
+    "10095": "统计子任务数量错误",
+    "10096": "创建子任务失败",
+    "10097": "不能删除有子任务的任务",
+    "10098": "读取我发布的新任务失败",
+    "10099": "修改已发布的新任务失败",
+    "10100": "你要修改的任务根本不存在",
+    "10101": "该任务已被其他用户处理，不能修改了",
+    "10102": "你只能修改自己发布的任务",
+    "10103": "删除新任务失败",
+    "10104": "该任务已被其他用户处理，不能修改了",
+    "10105": "你只能删除自己发布的任务",
+    "10106": "读取我的账户信息错误"
   }
 }
