--- a/src/language/english.json
+++ b/src/language/english.json
@@ -178,6 +178,16 @@
       "reject": "Reject"
     }
   },
+  "account": {
+    "TOP_UP": "Top up",
+    "WITHDRAW": "Withdraw",
+    "PUBLISH": "Publish",
+    "ACCEPT": "Accept job",
+    "REFUND": "Refund",
+    "createdTime":"Created time",
+    "amount":"Amount",
+    "type":"Type"
+  },
   "syserr":{
     "10002":"It seems the job id has lost, please try to reload the job list, and try to apply this job again.",
     "10003":"This job has been assigned to others already, please choose another job.",
@@ -282,6 +292,7 @@
     "10102":"Sorry! you only can update the job published by yourself",
     "10103":"Delete job failed",
     "10104":"The job has been applied by others, cannot be delete",
-    "10105":"Sorry! you only can delete the job published by yourself"
+    "10105":"Sorry! you only can delete the job published by yourself",
+    "10106":"Read my account data error"
   }
 }
