--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -293,6 +293,7 @@
     "10103": "删除新任务失败",
     "10104": "该任务已被其他用户处理，不能修改了",
     "10105": "你只能删除自己发布的任务",
-    "10106": "读取我的账户信息错误"
+    "10106": "读取我的账户信息错误",
+    "10107":"读取申请任务的用户列表错误"
   }
 }
