--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -294,6 +294,8 @@
     "10104": "该任务已被其他用户处理，不能修改了",
     "10105": "你只能删除自己发布的任务",
     "10106": "读取我的账户信息错误",
-    "10107":"读取申请任务的用户列表错误"
+    "10107":"读取申请任务的用户列表错误",
+    "10108":"读取用户历史记录错误",
+    "10109":"读取新申请的任务失败"
   }
 }
