--- a/src/language/english.json
+++ b/src/language/english.json
@@ -294,6 +294,8 @@
     "10104":"The job has been applied by others, cannot be delete",
     "10105":"Sorry! you only can delete the job published by yourself",
     "10106":"Read my account data error",
-    "10107":"Read users applied jobs error"
+    "10107":"Read users applied jobs error",
+    "10108":"Read users history record error",
+    "10109":"Read new apply job failed"
   }
 }
