--- a/src/language/english.json
+++ b/src/language/english.json
@@ -176,6 +176,10 @@
       "topUpRemark": "Remark",
       "accept": "Accept",
       "reject": "Reject"
+    },
+    "match":{
+      "applyTime":"Apply time",
+      "applyUser":"Apply user"
     }
   },
   "account": {
