--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -182,7 +182,11 @@
     "match":{
       "applyTime":"申请时间",
       "applyUser":"申请人",
-      "applyUserNum":"申请人数"
+      "applyUserNum":"申请人数",
+      "tipAgreeMatch":"确定要把该任务分配给该用户吗？",
+      "tipRejectMatch":"确定要拒绝该用户的的申请吗？",
+      "btAgree":"同意申请",
+      "btReject":"拒绝申请"
     }
   },
   "account": {
@@ -303,6 +307,8 @@
     "10106": "读取我的账户信息错误",
     "10107":"读取申请任务的用户列表错误",
     "10108":"读取用户历史记录错误",
-    "10109":"读取新申请的任务失败"
+    "10109":"读取新申请的任务失败",
+    "10110":"拒绝任务申请失败",
+    "10111":"同意任务申请失败"
   }
 }
