--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -328,6 +328,10 @@
     "10110":"拒绝任务申请失败",
     "10111":"同意任务申请失败",
     "10112":"你要处理的任务并不存在",
-    "10113":"创建留言失败"
+    "10113":"创建留言失败",
+    "10114": "修改email失败",
+    "10115": "新增电话号码失败",
+    "10116": "修改电话号码失败",
+    "10117": "你的实名已经认证，不能修改。若确实要修改，请直接与RPG秘书联系"
   }
 }
