--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -1,365 +1,29 @@
 {
-  "menuItem":{},
-  "common": {
-    "tipTitleQuestion": "提问",
-    "ok": "确定",
-    "cancel": "取消",
-    "unRead": "未阅读",
-    "submit": "提交"
-  },
-
-  "user":{
-    "email":"Email",
-    "emailPlaceholder":"请输入Email",
-    "password":"密码",
-    "passwordPlaceholder":"请输入登录密码",
-    "password2":"确认密码",
-    "password2Placeholder":"请再次确认登录密码",
-    "btRegister":"注册",
-    "btLogin":"登录"
-  },
-  "account":{},
-  "honor":{},
-  "task":{
-
-  },
-  "job":{
-  },
-  "admin":{
-
-  },
-  "secretary":{
-
-  },
-  "spotlight":{},
-
-  "command": {
-    "createNewTask": "创建新项目",
-    "myRPG": "我的RPG",
-    "myTask": "我的私有任务",
-    "myProfile": "我的信息",
-    "rpgAdministrator": "RPG管理员",
-    "rpgSecretary": "RPG秘书",
-    "adminManager": "管理员设置",
-    "matchJob": "匹配任务",
-    "topUp": "充值",
-    "spotlight": "申诉广场",
-    "signOut": "退出登录",
-    "settings": "设置",
-    "signIn": "登录",
-    "myJob": "我的工作",
-    "newJob": "新工作",
-    "partyA": "我是甲方",
-    "partyB": "我是乙方",
-    "myAccount": "我的账户",
-    "myHonor": "我的荣誉",
-    "myApply": "我申请的工作",
-    "myMatch": "分配给我的任务",
-    "dashboard": "控制台",
-    "myPendingJob": "我发布并等待成交的工作"
-  },
-
-  "label": {
-    "title": "标题",
-    "days": "期限（天）",
-    "price": "价格"
-  },
-  "header": {
-    "language": "语言"
-  },
-  "register": {
-    "username": "用户名",
-    "usernamePlaceholder": "手机/Email",
-    "password": "登录密码",
-    "password2": "确认密码",
-    "passwordPlaceholder": "请输入登录密码",
-    "password2Placeholder": "请再次确认密码",
-    "register": "注册",
-    "err1": "两次输入的密码不一致",
-    "err2": "请输入用户名",
-    "err3": "用户名必须是Email格式",
-    "err4": "用户名或密码不正确",
-    "login": "登录"
-  },
-  "task": {
-    "title": "任务标题",
-    "code": "任务代号",
-    "detail": "任务详情",
-    "days": "任务期限（天）",
-    "create": "创建任务",
-    "err1": "创建任务失败",
-    "createdUserName": "创建人",
-    "createdTime": "创建时间",
-    "update": "修改",
-    "logs": "进度日志",
-    "subTask": "子任务",
-    "freelancer": "威客",
-    "complete": "完成",
-    "delete": "删除",
-    "price": "任务金额",
-    "publish": "发布任务",
-    "succPublish": "恭喜，发布任务成功！",
-    "errPublish": "抱歉，发布任务失败!",
-    "checkPrice": "请输入正确的任务金额",
-    "pidTile": "父任务标题",
-    "subTaskTitleBar": "创建子任务：创建一个子任务",
-    "addSubTaskTitle": "增加",
-    "qDelete": "确定要删除任务？"
-  },
-  "job": {
-    "title": "任务标题",
-    "code": "项目代号",
-    "detail": "任务需求",
-    "days": "任务期限（天）",
-    "publishUserName": "任务发布者",
-    "partyAName": "甲方",
-    "partyBName": "乙方",
-    "publishTime": "发布时间",
-    "price": "任务报酬",
-    "apply": "申请任务",
-    "applyUserNum": "申请人数",
-    "matchingUserNum": "分配人数",
-    "btAcceptJob": "接受任务",
-    "btRejectJob": "拒绝任务",
-    "rejectJobRemark": "拒绝任务说明",
-    "tabLog": "日志",
-    "tabComplete": "验收",
-    "tabStop": "终止",
-    "tabSpotlight": "申诉",
-    "update": "修改",
-    "updateTipSucess": "任务修改成功",
-    "delete": "删除",
-    "deleteTip": "任务删除后不可恢复，确定要删除吗？",
-    "deleteTipSuccess": "任务删除成功",
-    "status":"任务当前状态"
-  },
-  "apply": {
-    "applyTime": "申请时间",
-    "readTime": "RPG秘书查看时间",
-    "applyProcessResult":"申请处理结果",
-    "applyTitle1":"申请任务",
-    "applyTitle2":"申请任务时请简要说明自己的优势，个人信息或作品链接，以便RPG秘书处理。",
-    "applyContent":"申请说明"
-  },
-  "jobMatchLog": {
-    "matchTime": "工作分配时间",
-    "processRemark": "处理意见",
-    "processResult": "处理结果",
-    "processTime": "处理时间",
-    "tipReject": "你要拒绝该任务吗？",
-    "tipAccept": "确定要接受该任务吗？",
-    "rejectRemark": "请说明你拒绝该任务的理由"
-  },
-  "partyA": {
-    "contractTime": "签约时间"
-  },
-  "jobLog": {
-    "content": "日志内容",
-    "create": "创建日志",
-    "createdTime": "创建时间",
-    "readTime": "对方阅读时间"
-  },
-  "jobComplete": {
-    "content": "完成说明",
-    "create": "创建验收日志",
-    "createdTime": "创建时间",
-    "readTime": "对方阅读时间",
-    "reject": "拒绝验收",
-    "accept": "验收通过",
-    "rejectRemark": "拒绝验收说明",
-    "acceptRemark": "通过验收说明"
-  },
-  "jobStop": {
-    "content": "终止说明",
-    "create": "提议终止",
-    "createdTime": "创建时间",
-    "readTime": "对方阅读时间",
-    "reject": "拒绝终止申请",
-    "accept": "同意终止",
-    "rejectRemark": "拒绝终止说明",
-    "acceptRemark": "通过终止说明",
-    "refund": "退还任务款",
-    "processResult": "处理结果",
-    "processTime": "处理时间",
-    "processUserName": "处理人"
-  },
-  "spot":{
-    "spotlight":{
-      "btCreate":"创建申诉话题",
-      "title":"申诉标题",
-      "content":"申诉内容",
-      "tipCreateSuccess":"创建申诉话题成功",
-      "tipCreateConfirm":"确定要发布申诉话题吗？",
-      "createdTime":"申诉发布时间",
-      "createdUserName":"申诉发起人"
-    }
+  "navigator":{
+    "signIn":"登录",
+    "signOut":"退出登录",
+    "language":"语言",
+    "createTask":"创建项目",
+    "spotlight":"申诉广场"
   },
   "user": {
-    "username": "用户名",
-    "realName": "真实姓名",
-    "phone": "联系电话",
+    "username":"登录名",
+    "usernamePlaceholder":"Eail/Phone",
     "email": "Email",
-    "confirm": "确认",
-    "update": "修改",
-    "userId": "用户ID",
-    "registerTime": "注册时间"
+    "emailPlaceholder": "请输入Email",
+    "password": "密码",
+    "passwordPlaceholder": "请输入登录密码",
+    "password2": "确认密码",
+    "password2Placeholder": "请再次确认登录密码",
+    "btRegister": "注册",
+    "btLogin": "登录",
+    "err2":"请输入Email",
+    "err3":"用户名必须是Email格式",
+    "err1": "两次输入的密码不一致",
+    "err4":"该Email已被其他用户使用了"
   },
-  "admin": {
-    "addAdmin": "添加管理员",
-    "addSecretary": "添加RPG秘书",
-    "totalApplyUser": "总申请人数",
-    "match": "分配",
-    "tip1": "确定要分配给该用户吗？",
-    "roleType": "权限角色"
-  },
-  "secretary": {
-    "topUp": {
-      "topUpAmount": "充值金额",
-      "topUpUser": "用户",
-      "topUpTime": "提交时间",
-      "topUpRemark": "说明",
-      "accept": "审核通过",
-      "reject": "审核拒绝"
-    },
-    "match":{
-      "applyTime":"申请时间",
-      "applyUser":"申请人",
-      "applyUserNum":"申请人数",
-      "tipAgreeMatch":"确定要把该任务分配给该用户吗？",
-      "tipRejectMatch":"确定要拒绝该用户的的申请吗？",
-      "btAgree":"同意申请",
-      "btReject":"拒绝申请",
-      "placeholderReject":"请说明拒绝该用户的理由",
-      "tipRejectSuccess":"拒绝用户申请成功",
-      "tipAgreeSuccess":"分配任务成功"
-    }
-  },
-  "account": {
-    "TOP_UP": "充值",
-    "WITHDRAW": "取现",
-    "PUBLISH": "发布任务",
-    "ACCEPT": "接受任务",
-    "REFUND": "退还任务款",
-    "createdTime":"发生时间",
-    "amount":"金额",
-    "type":"类别"
-  },
-  "syserr": {
-    "10002": "没有找到提交的任务ID，可能因为浏览器缓存丢失，请重新选择任务提交。",
-    "10003": "该任务已经分配给其他用户了，请选择其他工作申请。",
-    "10004": "Token校验错误。",
-    "10005": "你要申请的任务并不存在，请重新选择任务。",
-    "10006": "你申请的任务已经被别人抢走了，请选择其他任务。",
-    "10007": "你已经申请过当前任务了，请耐心等待管理员处理。",
-    "10008": "你没有设置管理员用户的权限。",
-    "10009": "设置管理员权限失败。",
-    "10010": "保存用户信息错误",
-    "10011": "分配任务失败",
-    "10012": "该任务已经分配给这个用户了，请等待用户处理",
-    "10013": "读取新任务失败",
-    "10014": "创建新用户失败",
-    "10015": "处理用户荣誉值失败",
-    "10016": "用户名重复",
-    "10017": "用户登录名不能为空",
-    "10018": "Email不存在",
-    "10019": "要操作的用户并不存在",
-    "10020": "你只登记了一个Email，不能删除。若要删除，请添加新的Email，并设置为默认。",
-    "10021": "该Email是默认Email，不能删除。若要删除，请将其他Email设置为默认。",
-    "10022": "发送认证邮件失败",
-    "10023": "验证Email失败",
-    "10024": "用户名或密码错误",
-    "10025": "登录失败",
-    "10026": "你提交的申请随着漂流瓶飘走了，我们还不知道它将飘向哪里，但这一定是一次伟大的冒险。",
-    "10027": "修改用户信息失败",
-    "10028": "读取用户信息失败",
-    "10029": "读取申请任务的用户失败",
-    "10030": "创建私有任务失败",
-    "10031": "读取私有任务失败",
-    "10032": "创建任务失败",
-    "10033": "申请任务失败",
-    "10034": "你没有RPG秘书权限",
-    "10035": "读取等待分配的任务失败",
-    "10036": "分配任务失败",
-    "10037": "你不能申请自己创建的任务",
-    "10038": "读取管理员信息错误",
-    "10039": "读取管理员权限错误",
-    "10040": "你没有RPG秘书权限",
-    "10041": "接受新任务失败",
-    "10042": "更新账户记录错误",
-    "10043": "你没有足够的账户余额发布该任务，请充值后再发布。",
-    "10044": "该Email已被其他用户使用了。",
-    "10045": "更新用户手机号码失败。",
-    "10046": "这个手机号码已经被其他用户使用了。",
-    "10047": "保存用户实名失败。",
-    "10048": "保存用户联系信息失败。",
-    "10049": "RPG秘书已经把该任务分配给你了，请在我的新任务里处理。",
-    "10050": "拒绝新任务失败",
-    "10051": "获取我的任务失败",
-    "10052": "创建任务日志失败",
-    "10053": "修改任务日志失败",
-    "10054": "获取任务日志失败",
-    "10055": "设置日志阅读时间错误",
-    "10056": "获取验收日志失败",
-    "10057": "创建验收日志失败",
-    "10058": "设置验收日志的阅读时间错误",
-    "10059": "修改验收日志错误",
-    "10060": "拒绝验收处理失败",
-    "10061": "验收通过处理失败",
-    "10062": "保存荣誉值失败",
-    "10063": "该任务已经验收通过，不能重复验收",
-    "10064": "创建终止任务申请失败",
-    "10065": "读取终止任务申请失败",
-    "10066": "设置终止任务的阅读时间失败",
-    "10067": "处理拒绝终止任务失败",
-    "10068": "处理同意终止任务失败",
-    "10069": "你上次创建的终止申请还未被处理，所以不能重复申请",
-    "10070": "该任务已经验收通过了，还要怎样终止呢？",
-    "10071": "非进行过程中的任务不能被终止",
-    "10072": "保存终止申请失败",
-    "10073": "已经拒绝了终止申请",
-    "10074": "你不能同意自己申请的终止，请等待对方处理。",
-    "10075": "已通过了任务终止申请，任务终止成功。",
-    "10076": "创建申诉事件失败",
-    "10077": "更新申诉事件失败",
-    "10078": "更新撤诉申请失败",
-    "10079": "创建撤诉申请失败",
-    "10080": "读取撤诉申请失败",
-    "10081": "设置阅读时间失败",
-    "10082": "拒绝撤诉申请失败",
-    "10083": "同意撤诉申请失败",
-    "10084": "获取任务信息失败",
-    "10085": "只有甲方或乙方用户能撤销申诉任务",
-    "10086": "该任务当前没有申诉事件",
-    "10087": "你不能处理你自己创建的撤诉申请",
-    "10088": "读取我的申诉信息失败",
-    "10089": "只有甲方或者乙方用户能访问该功能",
-    "10090": "只有甲方或者乙方能发起申诉",
-    "10091": "该任务正在申诉中，不能再发起申诉",
-    "10092": "该任务已经发布过了，且正在进行中，不能重复发布",
-    "10093": "保存私有任务失败",
-    "10094": "删除私有任务失败",
-    "10095": "统计子任务数量错误",
-    "10096": "创建子任务失败",
-    "10097": "不能删除有子任务的任务",
-    "10098": "读取我发布的新任务失败",
-    "10099": "修改已发布的新任务失败",
-    "10100": "你要修改的任务根本不存在",
-    "10101": "该任务已被其他用户处理，不能修改了",
-    "10102": "你只能修改自己发布的任务",
-    "10103": "删除新任务失败",
-    "10104": "该任务已被其他用户处理，不能修改了",
-    "10105": "你只能删除自己发布的任务",
-    "10106": "读取我的账户信息错误",
-    "10107":"读取申请任务的用户列表错误",
-    "10108":"读取用户历史记录错误",
-    "10109":"读取新申请的任务失败",
-    "10110":"拒绝任务申请失败",
-    "10111":"同意任务申请失败",
-    "10112":"你要处理的任务并不存在",
-    "10113":"创建留言失败",
-    "10114": "修改email失败",
-    "10115": "新增电话号码失败",
-    "10116": "修改电话号码失败",
-    "10117": "你的实名已经认证，不能修改。若确实要修改，请直接与RPG秘书联系"
+  "syserr":{
+    "10024":"用户名或密码错误"
   }
+
 }
