--- a/src/language/chineseOld.json
+++ b/src/language/chineseOld.json
@@ -332,6 +332,7 @@
     "10114": "修改email失败",
     "10115": "新增电话号码失败",
     "10116": "修改电话号码失败",
-    "10117": "你的实名已经认证，不能修改。若确实要修改，请直接与RPG秘书联系"
+    "10117": "你的实名已经认证，不能修改。若确实要修改，请直接与RPG秘书联系",
+    "10118":"读取Email错误"
   }
 }
