--- a/src/language/englishOld.json
+++ b/src/language/englishOld.json
@@ -332,6 +332,7 @@
     "10114": "Update email failed",
     "10115": "Insert phone failed",
     "10116": "Update phone failed",
-    "10117": "Your real name has been authorized already, cannot be changed. If you do need to change it, please contact the RPG secretary"
+    "10117": "Your real name has been authorized already, cannot be changed. If you do need to change it, please contact the RPG secretary",
+    "10118":"Read email error"
   }
 }
