--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -1,10 +1,31 @@
 {
+  "common":{
+    "tipTitleQuestion":"提问",
+    "ok": "确定",
+    "cancel": "取消",
+    "unRead": "未阅读",
+    "submit": "提交"
+  },
   "navigator":{
     "signIn":"登录",
     "signOut":"退出登录",
     "language":"语言",
     "createTask":"创建项目",
-    "spotlight":"申诉广场"
+    "spotlight":"申诉广场",
+    "myJob":"我的Job",
+    "dashboard":"控制台",
+    "myApply":"我申请的任务",
+    "partyA":"我是甲方",
+    "partyB":"我是乙方",
+    "myPending":"我发布的任务",
+    "myTask":"我的Task",
+    "myProfile":"我的信息",
+    "myAccount":"我的账户",
+    "myHonor":"我的荣誉",
+    "administrator":"RPG管理员",
+    "secretary":"RPG秘书",
+    "matchJob":"匹配任务",
+    "topUp":"充值"
   },
   "user": {
     "username":"登录名",
@@ -22,8 +43,26 @@
     "err1": "两次输入的密码不一致",
     "err4":"该Email已被其他用户使用了"
   },
+  "task":{
+    "btCreate":"创建Task",
+    "title":"标题",
+    "code":"项目代号",
+    "detail":"详情",
+    "days":"天数",
+    "price":"金额",
+    "createdUserName":"创建人",
+    "createdTime":"创建时间",
+    "delete":"删除",
+    "tipDelete":"确定要删除任务？",
+    "update":"修改",
+    "subTask":"子任务",
+    "freelancer":"发布",
+    "complete":"完成"
+  },
   "syserr":{
-    "10024":"用户名或密码错误"
+    "10024":"用户名或密码错误",
+    "10031": "读取私有任务失败",
+    "10095": "统计子任务数量错误"
   }
 
 }
