--- a/src/language/chineseOld.json
+++ b/src/language/chineseOld.json
@@ -90,7 +90,6 @@
     "price": "任务报酬",
     "apply": "申请任务",
     "applyUserNum": "申请人数",
-    "matchingUserNum": "分配人数",
     "btAcceptJob": "接受任务",
     "btRejectJob": "拒绝任务",
     "rejectJobRemark": "拒绝任务说明",
@@ -333,6 +332,7 @@
     "10115": "新增电话号码失败",
     "10116": "修改电话号码失败",
     "10117": "你的实名已经认证，不能修改。若确实要修改，请直接与RPG秘书联系",
-    "10118":"读取Email错误"
+    "10118":"读取Email错误",
+    "10119":"读取未阅读日志错误"
   }
 }
