--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -41,7 +41,10 @@
     "err2":"请输入Email",
     "err3":"用户名必须是Email格式",
     "err1": "两次输入的密码不一致",
-    "err4":"该Email已被其他用户使用了"
+    "err4":"该Email已被其他用户使用了",
+    "realName": "真实姓名",
+    "phone": "联系电话",
+    "btSaveUserInfo": "提交"
   },
   "task":{
     "btCreate":"创建Task",
@@ -67,13 +70,18 @@
     "partyAName": "甲方",
     "publishTime": "发布时间",
     "applyUserNum": "申请人数",
-    "btApplyJob":"申请任务"
+    "btApplyJob":"申请任务",
+    "applyTitle1":"申请任务",
+    "applyTitle2":"申请任务时请简要说明自己的优势，个人信息或作品链接，以便RPG秘书处理。",
+    "applyContent":"申请说明"
   },
   "syserr":{
     "10024":"用户名或密码错误",
     "10031": "读取私有任务失败",
     "10095": "统计子任务数量错误",
-    "10119":"读取未阅读日志错误"
+    "10119":"读取未阅读日志错误",
+    "10028": "读取用户信息失败",
+    "10048": "保存用户联系信息失败。"
   }
 
 }
